fix message didn't wrap if word is very long

--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -27,7 +27,7 @@
 
 /* chat */
 .message {
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     padding: 12px;
     border-radius: 0.375rem;
     width: fit-content;
